--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -3238,7 +3238,7 @@
         "!git clone https://github.com/JulianSchmidtke/CAPTUM.git"
       ],
       "id": "-QMYRkMslDGw",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3279,10 +3279,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LFVLJt6FMzRr",
-        "outputId": "a836766d-60b5-47b0-9488-822b91c18cf8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a836766d-60b5-47b0-9488-822b91c18cf8"
       },
       "source": [
         "from nltk.stem import PorterStemmer\n",
@@ -3298,7 +3298,7 @@
         "nltk.download('stopwords')"
       ],
       "id": "LFVLJt6FMzRr",
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3344,7 +3344,7 @@
         "df_files = pd.DataFrame(files, columns=['Filepath'])"
       ],
       "id": "18f27004",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3366,7 +3366,7 @@
         "df_files['Checksum'] = df_files['Filepath'].apply(get_checksum)"
       ],
       "id": "5ugMSyU0f_4n",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3379,7 +3379,7 @@
         "df_files['Content'] = df_files['Filepath'].apply(lambda f: open(f, 'r', encoding = \"ISO-8859-1\").read().replace(\"\\n\", \"\"))"
       ],
       "id": "-6NJ23USltk9",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3397,7 +3397,7 @@
         "df_files['Authors'] = [fN.split(' ')[0] for fN in df_files['Name']]"
       ],
       "id": "62410ea9",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3415,7 +3415,7 @@
         "    df_files.loc[df_files['Checksum'] == checksum, 'Tags'] = ', '.join(map(str, unique_tags))"
       ],
       "id": "NfbR4_P9s0f_",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3430,7 +3430,7 @@
         "df = df.loc[:,['Authors','Year','Tags', 'Content']]"
       ],
       "id": "riAajBNjiMCf",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3463,7 +3463,7 @@
         "    return filtered_text"
       ],
       "id": "983b795c",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3487,7 +3487,7 @@
         "    return [stemmer.stem(word) for word in text]"
       ],
       "id": "fa7a4b64",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3511,7 +3511,7 @@
         "    return [lemmatizer.lemmatize(word) for word in text]"
       ],
       "id": "efd6f40d",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3540,7 +3540,7 @@
         "df['Corpus'] = [' '.join(x) for x in df['Corpus']]"
       ],
       "id": "905d8df9",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3558,7 +3558,7 @@
         "df"
       ],
       "id": "HhxYmjBJ2iYG",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3732,7 +3732,7 @@
         "print(*tags, sep=\"\\n\")"
       ],
       "id": "StvfVkx226jA",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3788,6 +3788,97 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "vJf8rx6MoqDu"
+      },
+      "source": [
+        "### **LDA** (LatentDirichletAllocation) \n",
+        "Quelle: [Medium-Artikel zu LDA](https://towardsdatascience.com/nlp-with-lda-latent-dirichlet-allocation-and-text-clustering-to-improve-classification-97688c23d98)"
+      ],
+      "id": "vJf8rx6MoqDu"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j0i46zY1sXJ2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 215
+        },
+        "outputId": "47805bbb-bd82-43f5-d7c1-b0e45257e30f"
+      },
+      "source": [
+        "#Turn tags into a set for faster checking of whether a tag exists or not\n",
+        "type(list(df['Tags']))\n",
+        "unique_tags = set(', '.join(list(df['Tags'])).split(', '))\n",
+        "print(*tags, sep=\"\\n\")\n"
+      ],
+      "id": "j0i46zY1sXJ2",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-5c37b9ea875b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Turn tags into a set for faster checking of whether a tag exists or not\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Tags'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0munique_tags\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m', '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Tags'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m', '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iMTf0IC6qfQi"
+      },
+      "source": [
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "from sklearn.decomposition import LatentDirichletAllocation as LDA\n",
+        "\n",
+        "\n",
+        "def find_topics(text):\n",
+        "  count_vectorizer = CountVectorizer(stop_words='english')\n",
+        "  count_data = count_vectorizer.fit_transform(list(text))\n",
+        "\n",
+        "  # One topic that has an avg of two words because most questions had 1/2 tags\n",
+        "  number_topics = 4\n",
+        "  number_words = 10\n",
+        "\n",
+        "  # Create and fit the LDA model\n",
+        "  lda = LDA(n_components=number_topics, n_jobs=-1)\n",
+        "  lda.fit(count_data)\n",
+        "  words = count_vectorizer.get_feature_names()\n",
+        "\n",
+        "  #Get topics from model. They are represented as a list e.g. ['military','army']\n",
+        "  topics = [[words[i] for i in topic.argsort()[:-number_words - 1:-1]] for (topic_idx, topic) in enumerate(lda.components_)]\n",
+        "  topics = np.array(topics).ravel()\n",
+        "\n",
+        "  #Only use topics for which a tag already exists\n",
+        "  existing_topics = set.intersection(set(topics),unique_tags)\n",
+        "\n",
+        "  return words"
+      ],
+      "id": "iMTf0IC6qfQi",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wVjwSYTVvfKI"
+      },
+      "source": [
+        "find_topics(df['Content'])"
+      ],
+      "id": "wVjwSYTVvfKI",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "rjf-SfSvy_hP"
       },
       "source": [
@@ -3822,7 +3913,7 @@
         "from bertopic import BERTopic"
       ],
       "id": "xdOCH0kszsfi",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4379,7 +4470,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "wGpHETQJ-ujr",
-        "outputId": "831cc456-e08d-4c2f-c181-63ebf7456fd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 654,
@@ -4489,7 +4579,8 @@
             "1168b6050c2d4248878b8974b809c3ee",
             "c550801c81d8444394ddd8949c0b4296"
           ]
-        }
+        },
+        "outputId": "831cc456-e08d-4c2f-c181-63ebf7456fd4"
       },
       "source": [
         "from sentence_transformers import SentenceTransformer\n",
@@ -4497,7 +4588,7 @@
         "embeddings = model.encode(df['Content'], show_progress_bar=True)"
       ],
       "id": "wGpHETQJ-ujr",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4812,7 +4903,7 @@
         "                            metric='cosine').fit_transform(embeddings)"
       ],
       "id": "dKV0TTx4_MDa",
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4827,18 +4918,18 @@
         "                          cluster_selection_method='eom').fit(umap_embeddings)"
       ],
       "id": "KVcm8J1oAGdc",
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "IRLEuowiAt8z",
-        "outputId": "3ad9143a-b80a-41fd-c3cf-0f77aabde48f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 609
-        }
+        },
+        "outputId": "3ad9143a-b80a-41fd-c3cf-0f77aabde48f"
       },
       "source": [
         "# Prepare data\n",
@@ -4855,7 +4946,7 @@
         "plt.colorbar()"
       ],
       "id": "IRLEuowiAt8z",
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4900,10 +4991,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "HfedNDaf6IXj",
-        "outputId": "51aa1398-4dda-490c-bf01-0417a5a006d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "51aa1398-4dda-490c-bf01-0417a5a006d6"
       },
       "source": [
         "!pip install -q numpy\n",
@@ -4923,7 +5014,7 @@
         "!pip install -q top2vec[sentence_transformers]"
       ],
       "id": "HfedNDaf6IXj",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4973,24 +5064,24 @@
         "from top2vec import Top2Vec"
       ],
       "id": "dNR9_lgr6Rnw",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "M0Rivd9R6bDL",
-        "outputId": "86d99bcb-d63c-4fdc-8773-95da5803e32b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "86d99bcb-d63c-4fdc-8773-95da5803e32b"
       },
       "source": [
         "docs = list(df.loc[:, \"Content\"].values)\n",
         "docs[:5]"
       ],
       "id": "M0Rivd9R6bDL",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5014,16 +5105,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "XbrUw3TM7lRC",
-        "outputId": "bb8903b9-4451-45fc-b5e0-fe47c26414f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bb8903b9-4451-45fc-b5e0-fe47c26414f0"
       },
       "source": [
         "model = Top2Vec(docs, embedding_model='universal-sentence-encoder')"
       ],
       "id": "XbrUw3TM7lRC",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5053,16 +5144,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "W3QTpYcV7s4U",
-        "outputId": "5cd82741-d9e4-4d8a-cd80-c87bd79f9e53",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5cd82741-d9e4-4d8a-cd80-c87bd79f9e53"
       },
       "source": [
         "model.get_num_topics()"
       ],
       "id": "W3QTpYcV7s4U",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5087,25 +5178,25 @@
         "topic_words, word_scores, topic_nums = model.get_topics(1)"
       ],
       "id": "51SEhzi-7xae",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "-QwLqbcl76A_",
-        "outputId": "4d1409d5-844d-4c62-e3c1-77328036b173",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 421
-        }
+        },
+        "outputId": "4d1409d5-844d-4c62-e3c1-77328036b173"
       },
       "source": [
         "for topic in topic_nums:\n",
         "    model.generate_topic_wordcloud(topic)"
       ],
       "id": "-QwLqbcl76A_",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5141,7 +5232,7 @@
         "tfidfconvert = TfidfVectorizer(ngram_range=(1,1)).fit(df.Corpus.values)"
       ],
       "id": "2453744a",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5157,7 +5248,7 @@
         "len(tfidfconvert.vocabulary_)"
       ],
       "id": "362e41ab",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5182,7 +5273,7 @@
         "words_transformed = tfidfconvert.transform(df.Corpus.values)"
       ],
       "id": "95f044e2",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5204,7 +5295,7 @@
         "from sklearn.cluster import KMeans"
       ],
       "id": "67d59ddc",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5238,7 +5329,7 @@
         "    "
       ],
       "id": "3a8567ca",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5276,7 +5367,7 @@
         "plt.show()"
       ],
       "id": "49a1714b",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5346,7 +5437,7 @@
         "df"
       ],
       "id": "2J_xfRVEWce6",
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5587,7 +5678,7 @@
         "# df['Markers'].apply(str_contains, a = 'CRP', b='IgE')"
       ],
       "id": "sGpk2cFBbQHm",
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5643,7 +5734,7 @@
         "df_markers"
       ],
       "id": "ryrHJswlmUNm",
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
