--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -3238,7 +3238,7 @@
         "!git clone https://github.com/JulianSchmidtke/CAPTUM.git"
       ],
       "id": "-QMYRkMslDGw",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3268,7 +3268,7 @@
         "import numpy as np"
       ],
       "id": "21aa3cc8",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3299,7 +3299,7 @@
         "df_files = pd.DataFrame(files, columns=['Filepath'])"
       ],
       "id": "18f27004",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3321,18 +3321,18 @@
         "df_files['Checksum'] = df_files['Filepath'].apply(get_checksum)"
       ],
       "id": "5ugMSyU0f_4n",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "-6NJ23USltk9",
-        "outputId": "c1da0789-2ddc-49ef-fc88-d532b99943ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "c1da0789-2ddc-49ef-fc88-d532b99943ee"
       },
       "source": [
         "#Den Inhalt der Paper einlesen und in einen Pandas-\n",
@@ -3340,7 +3340,7 @@
         "df_files"
       ],
       "id": "-6NJ23USltk9",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3480,7 +3480,7 @@
         "df_files['Authors'] = [fN.split(' ')[0] for fN in df_files['Name']]"
       ],
       "id": "62410ea9",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3498,7 +3498,7 @@
         "    df_files.loc[df_files['Checksum'] == checksum, 'Tags'] = ', '.join(map(str, unique_tags))"
       ],
       "id": "NfbR4_P9s0f_",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3513,7 +3513,7 @@
         "df = df.loc[:,['Authors','Year','Tags', 'Content']]"
       ],
       "id": "riAajBNjiMCf",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3549,7 +3549,7 @@
         "nltk.download('stopwords')"
       ],
       "id": "LFVLJt6FMzRr",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3609,7 +3609,7 @@
         "    return filtered_text"
       ],
       "id": "983b795c",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3633,7 +3633,7 @@
         "    return [stemmer.stem(word) for word in text]"
       ],
       "id": "fa7a4b64",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3657,7 +3657,7 @@
         "    return [lemmatizer.lemmatize(word) for word in text]"
       ],
       "id": "efd6f40d",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3682,7 +3682,7 @@
         "  return text"
       ],
       "id": "xKqD-XOFY8Xd",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3701,18 +3701,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "Een3ZWIMZ6jJ",
-        "outputId": "432228e6-4502-4558-fd06-ceaf81846b4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 137
-        }
+        },
+        "outputId": "432228e6-4502-4558-fd06-ceaf81846b4d"
       },
       "source": [
         "df['Corpus'] = df['Content'].apply(lambda c: normalize_text(c))\n",
         "df['Corpus'][0]"
       ],
       "id": "Een3ZWIMZ6jJ",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3746,7 +3746,7 @@
         "df"
       ],
       "id": "HhxYmjBJ2iYG",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3920,7 +3920,7 @@
         "print(*tags, sep=\"\\n\")"
       ],
       "id": "StvfVkx226jA",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4000,7 +4000,7 @@
         "print(*unique_tags, sep=\"\\n\")\n"
       ],
       "id": "j0i46zY1sXJ2",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4082,7 +4082,7 @@
         "  return (words, distinct_topics, topic_groups, existing_topics)"
       ],
       "id": "iMTf0IC6qfQi",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4094,23 +4094,23 @@
         "words, distinct_topics, topic_groups, existing_topics = find_topics(df['Corpus'])"
       ],
       "id": "wVjwSYTVvfKI",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0hlQ-SwUzDG1",
-        "outputId": "35b8ffc0-4f2f-4291-dac0-9cb28fc0ab72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "35b8ffc0-4f2f-4291-dac0-9cb28fc0ab72"
       },
       "source": [
         "sorted(distinct_topics)"
       ],
       "id": "0hlQ-SwUzDG1",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5928,6 +5928,42 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "OfRnuFS-6pSI"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "# **IDEEN zum Cluster bilden**\n",
+        "\n",
+        "\n",
+        "- Bag of Words kreiren um neuer Cluster / Wortgruppen zu finden über Häufigkeit der Wörter oder nähe der Wörter zu einander\n",
+        "- Visualisieren des Links zwischen Markern in einer HeatMap\n",
+        "- BioBert einsetzen\n",
+        "- Part of Speech recognition um Autorennamen zu identifizieren \n",
+        "- AutorenNamen und Marker verknüpfen / clustern\n",
+        "- \n",
+        "\n",
+        "\n",
+        "**Generelle Todo's**\n",
+        "- Distinct Values für Abkürzungsverzeichnis erheben und mit Markern abgleichen\n",
+        "- CRISP-DM als Vorgehensmoddel zugrundeliegen\n",
+        "- Begründen Stemm / Lemmatizing - Erörterung im Paper"
+      ],
+      "id": "OfRnuFS-6pSI"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BNIjduSKhYrq"
+      },
+      "source": [
+        "# === AB HIER IRRELEVANT ==="
+      ],
+      "id": "BNIjduSKhYrq"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "KeAhKA03WAhV"
       },
       "source": [
@@ -6200,32 +6236,6 @@
         "## How good is the quality of the study that demonstrates a link (how many patients?, how well characterized?, multicenter?, prospective vs retrospective, etc….)?"
       ],
       "id": "uIv498DZWUz_"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OfRnuFS-6pSI"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "# **IDEEN zum Cluster bilden**\n",
-        "\n",
-        "\n",
-        "- Bag of Words kreiren um neuer Cluster / Wortgruppen zu finden über Häufigkeit der Wörter oder nähe der Wörter zu einander\n",
-        "- Visualisieren des Links zwischen Markern in einer HeatMap\n",
-        "- BioBert einsetzen\n",
-        "- Part of Speech recognition um Autorennamen zu identifizieren \n",
-        "- AutorenNamen und Marker verknüpfen / clustern\n",
-        "- \n",
-        "\n",
-        "\n",
-        "**Generelle Todo's**\n",
-        "- Distinct Values für Abkürzungsverzeichnis erheben und mit Markern abgleichen\n",
-        "- CRISP-DM als Vorgehensmoddel zugrundeliegen\n",
-        "- Begründen Stemm / Lemmatizing - Erörterung im Paper"
-      ],
-      "id": "OfRnuFS-6pSI"
     }
   ]
 }
